--- a/translations/sentinels.tex/ru.po
+++ b/translations/sentinels.tex/ru.po
@@ -84,7 +84,7 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
-"\\textit{Мир за пределами нашего полон тварей и чудовищ, едва сдерживаемый четырьмя священными Обелисками.\n"
+"\\textit{Мир за пределами нашего полон тварей и чудовищ, едва сдерживаемых четырьмя священными Обелисками.\n"
 "  Но сила этих камней убывает, и прорыв неминуем.\n"
 "  Когда это случится, только вы и ваш союзник встанете между ордами и полным опустошением этих земель.\n"
 "}\n"
@@ -111,7 +111,7 @@ msgid ""
 "This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
-"Этот сценарий длится 12 Раундов.\n"
+"Этот сценарий длится 12 раундов.\n"
 "\n"
 
 #. type: multicols
@@ -121,11 +121,36 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:24
 #: campaigns/inferno_steadwicks_fall.tex:20
 #: campaigns/inferno_deal_with_the_devil.tex:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
 "\n"
 
@@ -196,7 +221,7 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"\\textbf{Набор элементов Карты:} Каждый игрок берет 1 случайный ближний (IV--V) элемент карты и 1 дальний (II--III) элемент карты. Эти элементы не должны содержать Обелисков.\n"
+"\\textbf{Набор фрагментов карты:} Каждый игрок берёт 1 случайный ближний (IV--V) фрагмент карты и 1 дальний (II--III) фрагмент карты. Эти фрагменты не должны содержать Обелисков.\n"
 "\n"
 
 #. type: multicols
@@ -227,11 +252,36 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:88
 #: campaigns/inferno_steadwicks_fall.tex:92
 #: campaigns/inferno_deal_with_the_devil.tex:52
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
 "\n"
 
@@ -239,12 +289,25 @@ msgstr ""
 #: coops/sentinels.tex:44 campaigns/inferno_devilish_plan.tex:90
 #: campaigns/castle_greek_gift.tex:49 campaigns/castle_sicilian_dragon.tex:50
 #: campaigns/castle_two_knights_defense.tex:47
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"Возьмите следующие фрагменты карты и расположите по схеме карты сценария:\n"
 "\n"
 
 #. type: multicols
@@ -259,9 +322,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item 2 × Стартовый (I) элемент карты\n"
-"  \\item 4 × Дальний  (II--III) элемент карты\n"
-"  \\item 4 × Ближний (IV--V) элемент карты с полем Обелиска\n"
+"  \\item 2 × Стартовый (I) фрагмент карты\n"
+"  \\item 4 × Дальний  (II--III) фрагмент карты\n"
+"  \\item 4 × Ближний (IV--V) фрагмент карты с полем Обелиска\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -273,11 +336,42 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:83
 #: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
 #: campaigns/castle_two_knights_defense.tex:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Условия Победы}}\n"
 "\n"
 
@@ -297,11 +391,33 @@ msgstr ""
 #: coops/stand_united.tex:56 campaigns/inferno_devilish_plan.tex:125
 #: campaigns/inferno_steadwicks_fall.tex:137
 #: campaigns/inferno_deal_with_the_devil.tex:87
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
 "\n"
 
@@ -312,7 +428,7 @@ msgid ""
 "An undefeated enemy army remains at the end of Round 12.\n"
 "\n"
 msgstr ""
-"Непобеждённая вражеская армия остаётся на поле к концу 12 Раунда.\n"
+"Непобеждённая вражеская армия остаётся на поле к концу 12 раунда.\n"
 "\n"
 
 #. type: multicols
@@ -334,11 +450,51 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
 #: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{События по Раундам}}\n"
 "\n"
 
@@ -355,7 +511,7 @@ msgid ""
 msgstr ""
 "\\textbf{Раунд 6:}\n"
 "\\begin{itemize}\n"
-"  \\item Уберите все чёрные кубики с каждой Мельницы, Водяной Мельницы, Мистического Сада на карте.\n"
+"  \\item Уберите все чёрные кубики с каждой Мельницы, Водяной мельницы, Мистического сада на карте.\n"
 "  \\item Разместите вражескую армию в соответствии с правилами ниже.\n"
 "\\end{itemize}\n"
 "\n"
@@ -388,7 +544,7 @@ msgid ""
 msgstr ""
 "\\textbf{Раунд 9:}\n"
 "\\begin{itemize}\n"
-"  \\item Повторите события Раунда 6.\n"
+"  \\item Повторите события раунда 6.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -442,8 +598,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item  Игнорируйте жёлтые границы на стартовых Элементах.\n"
-"  \\item Торговля ресурсами доступна когда активный герой посещает Торговый Пост или на поле рядом с союзным героем.\n"
+"  \\item  Игнорируйте жёлтые границы на стартовых фрагментах.\n"
+"  \\item Торговля ресурсами доступна когда активный герой посещает Рынок или на поле рядом с союзным героем.\n"
 "  \\item Герой, победивший вражескую армию, получает 2 \\svg{experience}.\n"
 "    Игрок бросает два кубика сокровищ и выбирает один результат.\n"
 "  \\item Кроме того, игроки не могут:\n"
@@ -518,9 +674,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Вражеские армии имеют 3 \\svg{movement} за раунд.\n"
+"  \\item У вражеских армий есть 3 \\svg{movement} за раунд.\n"
 "  \\item Вражеские армии двигаются в конце каждого раунда, начиная с раунда появления.\n"
-"  \\item Вражеские армии двигаются по правилам из Книги Правил (стр. 33), но вместо захвата уничтожают всё на своём пути.\n"
+"  \\item Вражеские армии двигаются по правилам из Книги правил (стр. 33), но вместо захвата уничтожают всё на своём пути.\n"
 "    Размещайте чёрные кубики на каждом поле, через которое они прошли, считая эти поля пустыми с этого момента.\n"
 "  \\item Если движение врага может идти в разных направлениях, игроки решают, куда он направится.\n"
 "\\end{itemize}\n"
@@ -565,7 +721,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Boss Army}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Армия Босса}}\n"
+"\\subsection*{\\MakeUppercase{Армия босса}}\n"
 "\n"
 
 #. type: multicols
@@ -581,10 +737,10 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item  В 10 раунде появляется армия босса. Она отличается от предыдущих армий тем, что усиливается из фиксированного пула нейтральных юнитов (пул усиления = число в скобках в таблице ниже).\n"
-"  \\item В начале 2 раунда боя и каждого последующего раунда, 2 юнита усиливают оставшуюся армию из перемешанного пула усиления (до максимум 5 юнитов), чтобы продолжить бой до отступления игрока или уничтожения всех нейтральных юнитов из пула усиления. \\textit{Если количество вражеских юнитов в начале раунда равно 1 или меньше, возьмите до 4 юнитов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских юнитов, если они доступны).}\n"
+"  \\item  В 10 раунде появляется армия босса. Она отличается от предыдущих армий тем, что подкрепляется из фиксированного пула нейтральных юнитов (пул подкрепления = число в скобках в таблице ниже).\n"
+"  \\item В начале 2 раунда боя и каждого последующего раунда, 2 юнита подкрепляют оставшуюся армию из перемешанного пула подкрепления (до максимум 5 юнитов), чтобы продолжить бой до отступления игрока или уничтожения всех нейтральных юнитов из пула подкрепления. \\textit{Если количество вражеских юнитов в начале раунда равно 1 или меньше, возьмите до 4 юнитов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских юнитов, если они доступны).}\n"
 "  \\item Разместите усиливающие юниты на вражеской задней линии, начиная слева с самой низкой инициативы (сначала юниты \\svg{unit_ranged}). При необходимости продолжите на следующей линии в том же порядке.\n"
-"  \\item Когда игрок отступает, вражеская армия берёт минимум 4 юнита и использует их как стартовые в следующем сражении.\n"
+"  \\item Когда игрок отступает, вражеская армия добирает до 4 юнитов и использует их как стартовые в следующем сражении.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -670,7 +826,7 @@ msgstr ""
 "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
 "\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
 "\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
-"\\darkcell[1.4]{Сложный} & \\lightcell[1.4]{\\silver \\silver \\golden "
+"\\darkcell[1.4]{Тяжёлый} & \\lightcell[1.4]{\\silver \\silver \\golden "
 "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
 "\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
 "\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
