--- a/translations/castle_sicilian_dragon.tex/ru.po
+++ b/translations/castle_sicilian_dragon.tex/ru.po
@@ -48,12 +48,25 @@ msgstr ""
 #: coops/sentinels.tex:44 campaigns/inferno_devilish_plan.tex:90
 #: campaigns/castle_greek_gift.tex:49 campaigns/castle_sicilian_dragon.tex:50
 #: campaigns/castle_two_knights_defense.tex:47
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"Возьмите следующие фрагменты карты и расположите по схеме карты сценария:\n"
 "\n"
 
 #. type: multicols*
@@ -64,11 +77,42 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:83
 #: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
 #: campaigns/castle_two_knights_defense.tex:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Условия Победы}}\n"
 "\n"
 
@@ -81,11 +125,51 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
 #: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{События по Раундам}}\n"
 "\n"
 
