--- a/translations/inferno_steadwicks_fall.tex/ru.po
+++ b/translations/inferno_steadwicks_fall.tex/ru.po
@@ -65,11 +65,36 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:24
 #: campaigns/inferno_steadwicks_fall.tex:20
 #: campaigns/inferno_deal_with_the_devil.tex:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
 "\n"
 
@@ -80,11 +105,36 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:88
 #: campaigns/inferno_steadwicks_fall.tex:92
 #: campaigns/inferno_deal_with_the_devil.tex:52
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
 "\n"
 
@@ -96,11 +146,42 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:83
 #: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
 #: campaigns/castle_two_knights_defense.tex:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Условия Победы}}\n"
 "\n"
 
@@ -110,11 +191,33 @@ msgstr ""
 #: coops/stand_united.tex:56 campaigns/inferno_devilish_plan.tex:125
 #: campaigns/inferno_steadwicks_fall.tex:137
 #: campaigns/inferno_deal_with_the_devil.tex:87
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
 "\n"
 
@@ -127,11 +230,51 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
 #: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
+"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
+"\n"
+"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{События по Раундам}}\n"
 "\n"
 
