Fixedtranslations/recommendations.tex/ru.po

--- a/translations/recommendations.tex/ru.po
+++ b/translations/recommendations.tex/ru.po
@@ -48,7 +48,7 @@ msgstr ""
 #. type: Plain text
 #: sections/recommendations.tex:3
 msgid "\\addsection{Recommendations}{\\art/haste.png}"
-msgstr " \addsection{Рекоммендации}{\art/haste.png}"
+msgstr " \addsection{Рекомендации}{\art/haste.png}"
 
 #. type: Plain text
 #: sections/recommendations.tex:5
@@ -66,7 +66,7 @@ msgid ""
 "\n"
 msgstr ""
 "{2}\n"
-"Мы собрали несколько пользовательских правил и лучших практик, для лучшего игрового опыта.\n"
+"Мы собрали несколько пользовательских правил и лучших практик для лучшего игрового опыта.\n"
 "Помните, что это лишь \\textbf{мнения авторов} этой книги.\n"
 "Приятной игры!\n"
 "\n"
@@ -131,7 +131,7 @@ msgid ""
 "Your expected minimal play time would be around 3 hours.\n"
 "\n"
 msgstr ""
-"Например, если вы играете в Сценарий на трёх игроков длительностью 12 раундов, вы можете легко вычислить, что $3 \\times 12 \\times 5 = 180$.\n"
+"Например, если вы играете в cценарий на трёх игроков длительностью 12 раундов, вы можете легко вычислить, что $3 \\times 12 \\times 5 = 180$.\n"
 "Ваше ожидаемое минимальное время игры составит около трёх часов.\n"
 "\n"
 
@@ -176,7 +176,7 @@ msgid ""
 "\\subsection*{Guaranteed Settlement}\n"
 "\n"
 msgstr ""
-"\\subsection*{Гарантированный Посёлок}\n"
+"\\subsection*{Гарантированный посёлок}\n"
 "\n"
 
 #. type: multicols*
@@ -186,7 +186,7 @@ msgid ""
 "When distributing Far Tiles (II--III) between players, each player's pool of Map Tiles must include one Settlement.\n"
 "\n"
 msgstr ""
-"При распределении дальних элементов (II--III) между игроками, набор элементов карты каждого игрока должен включать один Посёлок.\n"
+"При распределении дальних фрагментов (II--III) между игроками, набор фрагментов карты каждого игрока должен включать один посёлок.\n"
 "\n"
 
 #. type: multicols*
@@ -228,7 +228,7 @@ msgid ""
 "\n"
 msgstr ""
 "Играя на уровнях тяжёлый или невозможный, считайте сражения уровней V–VII на одну ступень сложности ниже.\n"
-"Например, сражение уровня VII на тяжёлом будет против 2 × \\azure\\ нейтральных юнитов.\n"
+"Например, сражение уровня VII на тяжёлом будет против 2 × \\azure\\ нейтральных отрядов.\n"
 "\n"
 
 #. type: multicols*
@@ -250,7 +250,7 @@ msgid ""
 "\\subsection*{Trading Post}\n"
 "\n"
 msgstr ""
-"\\subsection*{Торговый Пост}\n"
+"\\subsection*{Рынок}\n"
 "\n"
 
 #. type: multicols*
@@ -260,7 +260,7 @@ msgid ""
 "Although rules as written state that you can remove only one Card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
 "\n"
 msgstr ""
-"Хотя по базовым правилам вы можете убрать только одну карту из руки при посещении Торгового Поста, рекомендуется разрешить убирать любое количество карт.\n"
+"Хотя по базовым правилам вы можете убрать только одну карту из руки при посещении Рынка, рекомендуется разрешить убирать любое количество карт.\n"
 "\n"
 
 #. type: multicols*
@@ -270,7 +270,7 @@ msgid ""
 "\\subsection*{Victory Points}\n"
 "\n"
 msgstr ""
-"\\subsection*{Победные Очки}\n"
+"\\subsection*{Победные очки}\n"
 "\n"
 
 #. type: multicols*
@@ -285,10 +285,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"При использовании опциональных Победных Очков из турнирной книги действуют правила (если Сценарий не предписывает иное):\n"
+"При использовании опциональных победных очков из турнирной книги действуют правила (если cценарий не предписывает иное):\n"
 "\\begin{itemize}\n"
 "  \\item Города фракций дают 1 ПО.\n"
-"  \\item Обладание Граалем в конце матча даёт 3 ПО. Если Грааль был доставлен в город фракции этого игрока, то даётся 5 ПО.\n"
+"  \\item Обладание Граалем в конце матча даёт 3 ПО. Если Грааль был доставлен в город фракции этого игрока, то даётся 5, а не 3.\n"
 "  \\item Захват Утопии драконов даёт 3 ПО.\n"
 "\\end{itemize}\n"
 "\n"
@@ -300,7 +300,7 @@ msgid ""
 "\\subsection*{Combat with Neutral Units}\n"
 "\n"
 msgstr ""
-"\\subsection*{Сражение с нейтральными юнитами}\n"
+"\\subsection*{Сражение с нейтральными отрядами}\n"
 "\n"
 
 #. type: multicols
@@ -310,7 +310,7 @@ msgid ""
 "During Combat with Neutral Units in Clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the Combat Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
-"В сражении с нейтральными юнитами в сценариях столкновений, если игрок располагает своих юнитов только на одной половине (левой или правой) доски сражения, игрок, располагающий нейтральных юнитов, должен поступить так же.\n"
+"В сражении с нейтральными отрядами в сценариях столкновений, если игрок располагает свои отряды только на одной половине (левой или правой) доски сражения, игрок, располагающий нейтральные отряды, должен поступить так же.\n"
 "\n"
 
 #. type: multicols
@@ -322,7 +322,7 @@ msgid ""
 "See examples that follow.\n"
 "\n"
 msgstr ""
-"Расположение нейтральных юнитов далеко друг от друга лишь заставляет другого игрока тратить \\svg{movement}, что замедляет игру.\n"
+"Расположение нейтральных отрядов далеко друг от друга лишь заставляет другого игрока тратить \\svg{movement}, что замедляет игру.\n"
 "Исключением из этого правила является случай, когда нужно раcположить трёх нейтральных \\svg{unit_ground} или \\svg{unit_flying}, поскольку все они должны занять переднюю линию.\n"
 "Смотрите следующие примеры.\n"
 "\n"
@@ -365,13 +365,13 @@ msgstr ""
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_good.png}\n"
-"    \\caption[good protected]{\\textit{Нейтральные юниты расположены\\\\правильно.}}\n"
+"    \\caption[good protected]{\\textit{Нейтральные отряды расположены\\\\правильно.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_bad.png}\n"
-"    \\caption[bad protected]{\\textit{Такое расположение не разрешено, потому что игрок за Некрополис расположил своих юнитов в левой половине доски сражений.\n"
+"    \\caption[bad protected]{\\textit{Такое расположение не разрешено, потому что игрок за Некрополис расположил свои отряды в левой половине доски сражений.\n"
 "      Крестьяне также должны начать сражение с левой стороны.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
@@ -404,7 +404,7 @@ msgstr ""
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_exception.png}\n"
-"    \\caption[exception protected]{\\textit{\\textbf{Исключение:} Три не-\\svg{unit_ranged} юнита должны быть расположены на передней линии.}}\n"
+"    \\caption[exception protected]{\\textit{\\textbf{Исключение:} Три не-\\svg{unit_ranged} отряда должны быть расположены на передней линии.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
@@ -448,10 +448,10 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item При решении, какое строение построить в вашем Городе, особенно в начале игры, \\textit{обычно} лучше отдавать приоритет юнитам чем Ратуше, Цитадели, Гильдии Магов или другим фракционным зданиям.\n"
+"  \\item При решении, какое строение построить в вашем городе, особенно в начале игры, \\textit{обычно} лучше отдавать приоритет юнитам чем Ратуше, Цитадели, Гильдии магов или другим фракционным зданиям.\n"
 "  \\item Если вы не уверены, какое заклинание, артефакт или навык выбрать, отдавайте приоритет тем, которые помогают вам циклически использовать вашу колоду.\n"
 "    Это включает любые карты, которые позволяют вам брать карты или возвращать карты из вашей стопки сброса.\n"
-"  \\item Старайтесь избегать использования ОП основного героя для действий, которые может выполнить вторичный герой, таких как открытие элементов карты, посещение Водяных Мельниц и тому подобное.\n"
+"  \\item Старайтесь избегать использования ОП основного героя для действий, которые может выполнить вторичный герой, таких как открытие элементов карты, посещение Водяных мельниц и тому подобное.\n"
 "\\end{itemize}\n"
 "\n"
 
