Fixed more errors

--- a/translations/sentinels.tex/ru.po
+++ b/translations/sentinels.tex/ru.po
@@ -121,38 +121,14 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:24
 #: campaigns/inferno_steadwicks_fall.tex:20
 #: campaigns/inferno_deal_with_the_devil.tex:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Подготовка игроков}}\n"
 "\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Игроков}}\n"
-"\n"
+
 
 #. type: multicols*
 #: coops/sentinels.tex:22 clash/dragoncurse_castle.tex:23
@@ -197,10 +173,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Стартовые юниты:}\n"
+"\\textbf{Стартовые отряды:}\n"
 "\\begin{itemize}\n"
-"  \\item «pack» \\svg{bronze} юнитов с \\textit{наименьшей} стоимостью найма\n"
-"  \\item «few» \\svg{bronze} юнитов с \\textit{наибольшей} стоимостью найма\n"
+"  \\item «pack» \\svg{bronze} отрядов с \\textit{наименьшей} стоимостью найма\n"
+"  \\item «few» \\svg{bronze} отрядов с \\textit{наибольшей} стоимостью найма\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -252,61 +228,23 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:88
 #: campaigns/inferno_steadwicks_fall.tex:92
 #: campaigns/inferno_deal_with_the_devil.tex:52
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Подготовка карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
 "\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:44 campaigns/inferno_devilish_plan.tex:90
 #: campaigns/castle_greek_gift.tex:49 campaigns/castle_sicilian_dragon.tex:50
 #: campaigns/castle_two_knights_defense.tex:47
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "Возьмите следующие фрагменты карты и расположите по схеме карты сценария:\n"
 "\n"
 
@@ -336,43 +274,12 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:83
 #: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
 #: campaigns/castle_two_knights_defense.tex:77
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Условия победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Победы}}\n"
 "\n"
 
 #. type: multicols
@@ -391,34 +298,12 @@ msgstr ""
 #: coops/stand_united.tex:56 campaigns/inferno_devilish_plan.tex:125
 #: campaigns/inferno_steadwicks_fall.tex:137
 #: campaigns/inferno_deal_with_the_devil.tex:87
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Условия поражения}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Условия Поражения}}\n"
 "\n"
 
 #. type: multicols
@@ -438,7 +323,7 @@ msgid ""
 "One of your Towns is captured, or a Main Hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
 msgstr ""
-"Один из ваших Городов захвачен, или основной герой побеждён в битве (отступление не считается).\n"
+"Один из ваших городов захвачен, или основной герой побеждён в битве (отступление не считается).\n"
 "\n"
 
 #. type: multicols
@@ -450,52 +335,12 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
 #: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{События по раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
 "\n"
 
 #. type: multicols
@@ -577,7 +422,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Дополнительные Правила}}\n"
+"\\subsection*{\\MakeUppercase{Дополнительные правила}}\n"
 "\n"
 
 #. type: multicols
@@ -605,7 +450,7 @@ msgstr ""
 "  \\item Кроме того, игроки не могут:\n"
 "  \\begin{itemize}\n"
 "      \\item Атаковать других героев.\n"
-"      \\item Захватывать Шахту или Посёлок под флагом противника.\n"
+"      \\item Захватывать шахту или посёлок под флагом противника.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
@@ -639,10 +484,10 @@ msgstr ""
 "  \\item Вражеские армии появляются на случайном поле с Обелиском (используйте миниатюры героев из фракций, не участвующих в игре).\n"
 "  \\item Определите поле Обелиска, бросив 2 кубика атаки. Применяйте результаты как (К1/К2), перебрасывайте 0:\n"
 "  \\begin{itemize}[leftmargin=15pt]\n"
-"    \\item $+1$/$+1$ = Север\n"
-"    \\item $+1$/$-1$ = Восток\n"
-"    \\item $-1$/$+1$ = Запад\n"
-"    \\item $-1$/$-1$ = Юг\n"
+"    \\item $+1$/$+1$ = север\n"
+"    \\item $+1$/$-1$ = восток\n"
+"    \\item $-1$/$+1$ = запад\n"
+"    \\item $-1$/$-1$ = юг\n"
 "  \\end{itemize}\n"
 "\n"
 
@@ -658,7 +503,7 @@ msgid ""
 msgstr ""
 "  \\item Для сбалансированного появления врагов в раундах 7 и 9 бросайте только второй кубик атаки (К2). Для К1 используйте противоположный результату из предыдущего раунда.\n"
 "  Раунды 8 и 10 случайны.\n"
-"  \\item Если элемент, где должен появиться враг, ещё не открыт, переверните его и расположите по своему усмотрению.\n"
+"  \\item Если фрагмент, где должен появиться враг, ещё не открыт, переверните его и расположите по своему усмотрению.\n"
 "  \\item Если на поле, где появляется враг, находится герой, битва начинается немедленно.\n"
 "\n"
 
@@ -707,10 +552,10 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Сражение с вражескими армиями дольше одного раунда боя не тратит \\svg{movement}.\n"
-"  \\item Во время сражения с вражеской армией герой может отступить, когда должен активироваться любой его юнит.\n"
-"    Отступающий основной герой теряет все оставшиеся ОП и возвращается в выбранный им союзный Город или Посёлок, сохраняя все оставшиеся юниты.\n"
-"  \\item Отступающие вторичные герои удаляются из игры, но их оставшиеся юниты сохраняются.\n"
-"  \\item Уничтоженные вражеские юниты не возрождаются.\n"
+"  \\item Во время сражения с вражеской армией герой может отступить, когда должен активироваться любой его отряд.\n"
+"    Отступающий основной герой теряет все оставшиеся ОП и возвращается в выбранный им союзный город или посёлок, сохраняя все оставшиеся отряды.\n"
+"  \\item Отступающие вторичные герои удаляются из игры, но их оставшиеся отряды сохраняются.\n"
+"  \\item Уничтоженные вражеские отряды не возрождаются.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -737,10 +582,10 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item  В 10 раунде появляется армия босса. Она отличается от предыдущих армий тем, что подкрепляется из фиксированного пула нейтральных юнитов (пул подкрепления = число в скобках в таблице ниже).\n"
-"  \\item В начале 2 раунда боя и каждого последующего раунда, 2 юнита подкрепляют оставшуюся армию из перемешанного пула подкрепления (до максимум 5 юнитов), чтобы продолжить бой до отступления игрока или уничтожения всех нейтральных юнитов из пула подкрепления. \\textit{Если количество вражеских юнитов в начале раунда равно 1 или меньше, возьмите до 4 юнитов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских юнитов, если они доступны).}\n"
-"  \\item Разместите усиливающие юниты на вражеской задней линии, начиная слева с самой низкой инициативы (сначала юниты \\svg{unit_ranged}). При необходимости продолжите на следующей линии в том же порядке.\n"
-"  \\item Когда игрок отступает, вражеская армия добирает до 4 юнитов и использует их как стартовые в следующем сражении.\n"
+"  \\item  В 10 раунде появляется армия босса. Она отличается от предыдущих армий тем, что подкрепляется из фиксированного пула нейтральных отрядов (пул подкрепления = число в скобках в таблице ниже).\n"
+"  \\item В начале 2 раунда боя и каждого последующего раунда, 2 отряда подкрепляют оставшуюся армию из перемешанного пула подкрепления (до максимум 5 отрядов), чтобы продолжить бой до отступления игрока или уничтожения всех нейтральных отрядов из пула подкрепления. \\textit{Если количество вражеских отрядов в начале раунда равно 1 или меньше, возьмите до 4 отрядов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских отрядов, если они доступны).}\n"
+"  \\item Разместите усиливающие отряды на вражеской задней линии, начиная слева с самой низкой инициативы (сначала отряды \\svg{unit_ranged}). При необходимости продолжите на следующей линии в том же порядке.\n"
+"  \\item Когда игрок отступает, вражеская армия добирает до 4 отрядов и использует их как стартовые в следующем сражении.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -846,5 +691,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Всегда 1 юнит Лазурных Драконов (стартовые юниты армии босса). Остальные "
-"случайны\\label{azure}."
+"Всегда 1 отряд Лазурных драконов (стартовые отряды армии босса). Остальные "
+"случайны\\label{azure}." 
