--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -38,7 +38,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
   \item P × Starting (I) Map Tile
   \item 2P × Near (IV–V) Map Tiles
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
-  \item P × Center (VI–VII) Map Tile
+  \item P × Center (VI–VII) Map Tiles
 \end{itemize}
 
 \columnbreak
